--- a/.github/workflows/makecode.yml
+++ b/.github/workflows/makecode.yml
@@ -20,7 +20,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install -g pxt
-          pxt target minecraft
+          pxt target microbit
           pxt install
           pxt build --cloud
         env:
