--- a/.github/workflows/makecode.yml
+++ b/.github/workflows/makecode.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           npm install -g pxt
           pxt target microbit
+          pxt install
           pxt build --cloud
         env:
           CI: true
